cmake_minimum_required(VERSION 3.8)
project(opencv_day2_hw1_pkg)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(OpenCV REQUIRED)
find_package(rclcpp REQUIRED)

# 실행 파일 추가
add_executable(opencv_day2_hw1_node src/main.cpp)
ament_target_dependencies(opencv_day2_hw1_node rclcpp OpenCV)

# 설치 설정
install(TARGETS
  opencv_day2_hw1_node
  DESTINATION lib/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  set(ament_cmake_copyright_FOUND TRUE)
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
